syntax = "proto3";

package tokenhandler;


option go_package = "github.com/Cytram/csgo-token/proto;token";

service Tokenservice {
  rpc CreateToken (CreateTokenRequest) returns (CreateTokenReply) {}
  rpc DeleteToken (DeleteTokenRequest) returns (DeleteTokenReply) {}
  rpc ViewToken (ViewTokenRequest) returns (ViewTokenReply) {}
}

message CreateTokenRequest {
  string memo   = 1;
  int32  app_id = 2;
}

message CreateTokenReply {
  string id = 1;
}

message DeleteTokenRequest {
  string id = 1;
}

message DeleteTokenReply {
  string id = 1;
}

message ViewTokenRequest {
  string id   = 1;
  string memo = 2;
}

message ViewTokenReply {
  string id   = 1;
  string memo = 2;
}
